feat(store-facade-facade): created a new api for creating products
new api

BREAKING CHANGE:
new api

-31
